updated the javascript for the animations to go more smoothly

--- a/oregon.html
+++ b/oregon.html
@@ -80,19 +80,19 @@
     <div class="summary">
         <div class="summary__container">
             <div class="summary__image2">
-                <img src="/images/squared-images/sq-oregon-haystack-rock1.jpg" alt="Oregon Coast" class="summary__img animate-img">
+                <img src="/images/squared-images/sq-oregon-haystack-rock1.jpg" alt="Oregon Coast" class="summary__img animate-img2">
             </div>
             <div class="summary__text">
-                <p class="topline animate-summary">Wonder #2</p>
-                <h1 class="summary__headline animate-summary">Oregon Coast</h1>
+                <p class="topline animate-summary2">Wonder #2</p>
+                <h1 class="summary__headline animate-summary2">Oregon Coast</h1>
                 <div class="summary__features">
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-hiking"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-mountain"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-water"></i>Text
                 </div>
             </div>
@@ -126,19 +126,19 @@
     <div class="summary">
         <div class="summary__container">
             <div class="summary__image2">
-                <img src="/images/squared-images/sq-oregon-crater-lake.jpg" alt="Oregon Coast" class="summary__img animate-img">
+                <img src="/images/squared-images/sq-oregon-crater-lake.jpg" alt="Oregon Coast" class="summary__img animate-img2">
             </div>
             <div class="summary__text">
-                <p class="topline animate-summary">Wonder #4</p>
-                <h1 class="summary__headline animate-summary">Crater Lake</h1>
+                <p class="topline animate-summary2">Wonder #4</p>
+                <h1 class="summary__headline animate-summary2">Crater Lake</h1>
                 <div class="summary__features">
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-hiking"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-mountain"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-water"></i>Text
                 </div>
             </div>
@@ -172,19 +172,19 @@
     <div class="summary">
         <div class="summary__container">
             <div class="summary__image2">
-                <img src="/images/squared-images/sq-oregon-painted-hills.jpg" alt="Painted Hills" class="summary__img animate-img">
+                <img src="/images/squared-images/sq-oregon-painted-hills.jpg" alt="Painted Hills" class="summary__img animate-img2">
             </div>
             <div class="summary__text">
-                <p class="topline animate-summary">Wonder #6</p>
-                <h1 class="summary__headline animate-summary">Painted Hills</h1>
+                <p class="topline animate-summary2">Wonder #6</p>
+                <h1 class="summary__headline animate-summary2">Painted Hills</h1>
                 <div class="summary__features">
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-hiking"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-mountain"></i>Text
                     </p>
-                    <p class="summary__feature animate-summary">
+                    <p class="summary__feature animate-summary2">
                         <i class="fas fa-water"></i>Text
                 </div>
             </div>
