updated some of the text on the oregon.html page and also updated items in the footer a bit (name + email)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="oregon.html" class="navbar__link">Oregon</a>
             <a href="coming-soon.html" class="navbar__link">Gallery</a>
             <a href="coming-soon.html" class="navbar__link">Blog</a>
             <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
@@ -56,7 +56,7 @@
                         <i class="fas fa-hiking"></i>Trails
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-mountain"></i>Elevations
+                        <i class="fas fa-mountain"></i>Mountains
                     </p>
                     <p class="summary__feature animate-summary">
                         <i class="fas fa-water"></i>Coastal
@@ -170,8 +170,8 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Oregon's outdoors ready to explore</p>
-                <p id="phone">(503) - 000 - 0000</p>
+                <p>Developed by Kevin Pham</p>
+                <p id="email">phamkevin04@gmail.com</p>
             </div>
             <div class="footer__links">
                 <div class="footer__title">
