--- a/oregon.html
+++ b/oregon.html
@@ -28,7 +28,7 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="oregon.html" class="navbar__link">Oregon</a>
             <a href="coming-soon.html" class="navbar__link">Gallery</a>
             <a href="coming-soon.html" class="navbar__link">Blog</a>
             <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
@@ -60,14 +60,14 @@
                 <h1 class="summary__headline animate-summary">The Columbia <Br> River Gorge</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-water"></i>The Columbia River is the largest river in the Pacific Northwest of North America
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-mountain"></i>Text
+                        <i class="fas fa-hiking"></i>Over 10+ waterfalls and hiking trails within an hour drive of Portland
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-water"></i>Text
-                    </p>
+                        <i class="fas fa-mountain"></i>Amazing viewpoints that require some time driving on the wonderful I-84 highway
+                    </p>       
                 </div>
             </div>
             <div class="summary__image">
@@ -87,13 +87,15 @@
                 <h1 class="summary__headline animate-summary2">Oregon Coast</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-hiking"></i>Trails that show the true beauty of the Pacific Ocean
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-mountain"></i>Text
+                        <!-- <i class="fas fa-mountain"></i>Text -->
+                        <i class="fas fa-camera"></i>The view is beyond words, the sun setting on the ocean, the calm and relaxing vibe
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-water"></i>Text
+                        <i class="fas fa-water"></i>Wake up early to enjoy the beautiful sunrise and catch calms and crabs with low tides
+                    </p>
                 </div>
             </div>
         </div>
@@ -107,13 +109,14 @@
                 <h1 class="summary__headline animate-summary">Smith Rock <Br> State Park</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-mountain"></i>Located in the high deserts of Oregon, but this 641 acres of land has all sorts of weathers
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-mountain"></i>Text
+                        <i class="fas fa-hiking"></i>Misery Ridge Trail is one of the most beautiful trails at Smith Rock, being able to see above the horizons
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-water"></i>Text
+                        <i class="fas fa-ice-cream"></i>Huckle berry is native to the Pacific Northwest and a must have at the local ice crea shop outside the entrance of Smith Rock
+                    </p>
                 </div>
             </div>
             <div class="summary__image">
@@ -133,13 +136,14 @@
                 <h1 class="summary__headline animate-summary2">Crater Lake</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-water"></i>Crater Lake National Park is home to the deepest lake in the United States
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-mountain"></i>Text
+                        <i class="fas fa-camera"></i>Travel the 30 miles of wonderous viewing of the lake and nature
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-water"></i>Text
+                        <i class="fas fa-mountain"></i>Crater Lake was not always a lake, but started off as a volcano that erupted centuries ago
+                    </p>
                 </div>
             </div>
         </div>
@@ -153,13 +157,14 @@
                 <h1 class="summary__headline animate-summary">Mt. Hood </h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-mountain"></i>Mt. Hood is Oregon's highest peak and one of the most prominent of the Cascades volcanoes
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-mountain"></i>Text
-                    </p>
+                        <i class="fas fa-hiking"></i>Mt. Hood National Forest has wonderful views, hot springs, trails, lakes and even camping spots
+                    </p>         
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-water"></i>Text
+                        <i class="fas fa-snowboard"></i>Take your winter trip adventures to the mountains between November to March annually
+                    </p>
                 </div>
             </div>
             <div class="summary__image">
@@ -185,7 +190,8 @@
                         <i class="fas fa-mountain"></i>Text
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-water"></i>Text
+                        <i class="fas fa-camera"></i>Text
+                    </p>
                 </div>
             </div>
         </div>
@@ -206,6 +212,7 @@
                         </p>
                         <p class="summary__feature animate-summary">
                             <i class="fas fa-water"></i>Text
+                        </p>
                     </div>
                 </div>
                 <div class="summary__image">
@@ -219,8 +226,8 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Oregon's outdoors ready to explore</p>
-                <p id="phone">(503) - 000 - 0000</p>
+                <p>Developed by Kevin Pham</p>
+                <p id="email">phamkevin04@gmail.com</p>
             </div>
             <div class="footer__links">
                 <div class="footer__title">
