--- a/coming-soon.html
+++ b/coming-soon.html
@@ -31,7 +31,7 @@
 
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
-            <a href="coming-soon.html" class="navbar__link">Oregon</a>
+            <a href="oregon.html" class="navbar__link">Oregon</a>
             <a href="coming-soon.html" class="navbar__link">Gallery</a>
             <a href="coming-soon.html" class="navbar__link">Blog</a>
             <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
@@ -59,8 +59,8 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Oregon's outdoors ready to explore</p>
-                <p id="phone">(503) - 000 - 0000</p>
+                <p>Developed by Kevin Pham</p>
+                <p id="email">phamkevin04@gmail.com</p>
             </div>
             <div class="footer__links">
                 <div class="footer__title">
