update of the footer text

--- a/oregon.html
+++ b/oregon.html
@@ -231,7 +231,7 @@
             </div>
             <div class="footer__links">
                 <div class="footer__title">
-                    Adventure Awaits
+                    Explore More
                 </div>
                 <a href="#" class="footer__link">Oregon</a>
                 <a href="#" class="footer__link">Gallery</a>
