--- a/coming-soon.html
+++ b/coming-soon.html
@@ -64,7 +64,7 @@
             </div>
             <div class="footer__links">
                 <div class="footer__title">
-                    Adventure Awaits
+                    Explore More
                 </div>
                 <a href="#" class="footer__link">Oregon</a>
                 <a href="#" class="footer__link">Gallery</a>
