--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="footer__links">
                 <div class="footer__title">
-                    Adventure Awaits
+                    Explore Mores
                 </div>
                 <a href="#" class="footer__link">Oregon</a>
                 <a href="#" class="footer__link">Gallery</a>
