--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="/" class="navbar__link">Home</a>
             <a href="oregon.html" class="navbar__link">Oregon</a>
             <a href="coming-soon.html" class="navbar__link">Gallery</a>
-            <a href="coming-soon.html" class="navbar__link">Blog</a>
+            <a href="blog.html" class="navbar__link">Blog</a>
             <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
             <a href="coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
             <!-- need to do more implementation later -->
@@ -177,9 +177,9 @@
                 <div class="footer__title">
                     Explore Mores
                 </div>
-                <a href="#" class="footer__link">Oregon</a>
+                <a href="oregon.html" class="footer__link">Oregon</a>
                 <a href="#" class="footer__link">Gallery</a>
-                <a href="#" class="footer__link">Blog</a>
+                <a href="blog.html" class="footer__link">Blog</a>
                 <a href="#" class="footer__link">Contact Me</a>
             </div>
         </div>
