finished the information on the oregon.html page

--- a/oregon.html
+++ b/oregon.html
@@ -184,13 +184,13 @@
                 <h1 class="summary__headline animate-summary2">Painted Hills</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-hiking"></i>Text
+                        <i class="fas fa-mountain"></i>Painted Hills is named after the colorful layers of the hills that are corresponding to various geological eras fromed over the ancient river floodplain
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-mountain"></i>Text
+                        <i class="fas fa-camera"></i>The color changes over the course of the day and season as well depending on the weather
                     </p>
                     <p class="summary__feature animate-summary2">
-                        <i class="fas fa-camera"></i>Text
+                        <i class="fas fa-hiking"></i>Several small trails are accessible year round at Painted Hills in the middle of Oregon
                     </p>
                 </div>
             </div>
@@ -205,13 +205,13 @@
                     <h1 class="summary__headline animate-summary">The Wallowas </h1>
                     <div class="summary__features">
                         <p class="summary__feature animate-summary">
-                            <i class="fas fa-hiking"></i>Text
+                            <i class="fas fa-hiking"></i>from the Wallowa Lake Village to the peak of Mt. Howard it can rise up to 3,700 feet in elevation
                         </p>
                         <p class="summary__feature animate-summary">
-                            <i class="fas fa-mountain"></i>Text
+                            <i class="fas fa-mountain"></i>At the higest peak, one can see beyond the high desert of Indian country and even past Hells Canyon into the next state
                         </p>
                         <p class="summary__feature animate-summary">
-                            <i class="fas fa-water"></i>Text
+                            <i class="fas fa-camera"></i>The wonderful view of the mountains, high elevation and nature creates the most relaxing environments
                         </p>
                     </div>
                 </div>
