--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
         <div class="navbar__menu">
             <a href="/" class="navbar__link">Home</a>
             <a href="oregon.html" class="navbar__link">Oregon</a>
-            <a href="coming-soon.html" class="navbar__link">Gallery</a>
+            <a href="gallery.html" class="navbar__link">Gallery</a>
             <a href="blog.html" class="navbar__link">Blog</a>
             <a href="https://forms.gle/MdHt4XWveDQzRnbE7" target="_blank" class="navbar__link">Feedback V1</a>
             <a href="coming-soon.html" class="navbar__link navbar__btn">Contact Me</a> 
@@ -62,7 +62,7 @@
                     Explore Mores
                 </div>
                 <a href="oregon.html" class="footer__link">Oregon</a>
-                <a href="#" class="footer__link">Gallery</a>
+                <a href="gallery.html" class="footer__link">Gallery</a>
                 <a href="blog.html" class="footer__link">Blog</a>
                 <a href="#" class="footer__link">Contact Me</a>
             </div>
