brief blogs added to the blogs page. planning to add more images later on as well

--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,27 @@
         </div>
     </div>
 
+    <!-- Blog Post Section -->
+    <div class="blog__container">
+        <div class="blog__image">
+            <img src="/images/oregon-crater-lake.jpg">
+        </div>
+        <div class="blog__content">
+            <h1>Crater Lake</h1>
+            <p>This was on my bucket list for several years, after about three years. I decided to hop in a car and take a day trip to Crater Lake with a friend.</p>
+        </div>
+    </div>
 
+    <!-- Blog Post Section -->
+    <div class="blog__container">
+        <div class="blog__image">
+            <img src="/images/kevin-nature/blue-pool-view.jpg">
+        </div>
+        <div class="blog__content">
+            <h1>Blue Pool</h1>
+            <p>I didn't know about this place until a group of friends suggested it! It's along the McKenzie River, at first I didn't understand why the water was such a neat blue but then realize after jumping into it, it's freezing blue water.</p>
+        </div>
+    </div>
 
     <!-- Footer Section -->
     <div class="footer">
