update the leftside of the footer wording

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -59,12 +59,12 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Developed by Kevin Pham</p>
-                <p id="email">phamkevin04@gmail.com</p>
+                <p>Developed by <br> Kevin Pham</p>
+                <!-- <p id="email">phamkevin04@gmail.com</p> -->
             </div>
             <div class="footer__links">
                 <div class="footer__title">
-                    Explore More
+                    Explore Mores
                 </div>
                 <a href="oregon.html" class="footer__link">Oregon</a>
                 <a href="gallery.html" class="footer__link">Gallery</a>
