--- a/gallery.html
+++ b/gallery.html
@@ -51,8 +51,8 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Developed by Kevin Pham</p>
-                <p id="email">phamkevin04@gmail.com</p>
+                <p>Developed by <br> Kevin Pham</p>
+                <!-- <p id="email">phamkevin04@gmail.com</p> -->
             </div>
             <div class="footer__links">
                 <div class="footer__title">
