--- a/oregon.html
+++ b/oregon.html
@@ -226,12 +226,12 @@
         <div class="footer__wrapper">
             <div class="footer__desc">
                 <h1>Adventure Awaits</h1>
-                <p>Developed by Kevin Pham</p>
-                <p id="email">phamkevin04@gmail.com</p>
+                <p>Developed by <br> Kevin Pham</p>
+                <!-- <p id="email">phamkevin04@gmail.com</p> -->
             </div>
             <div class="footer__links">
                 <div class="footer__title">
-                    Explore More
+                    Explore Mores
                 </div>
                 <a href="oregon.html" class="footer__link">Oregon</a>
                 <a href="gallery.html" class="footer__link">Gallery</a>
@@ -260,7 +260,7 @@
             </div>
         </div>
     </div>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
 
