minor changes to the styling on the pages and also text wording

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         <div class="summary__container">
             <div class="summary__text">
                 <p class="topline animate-summary">Oregon</p>
-                <h1 class="summary__headline animate-summary">Coffee and the wilderness</h1>
+                <h1 class="summary__headline animate-summary">Experience the Wilderness</h1>
                 <div class="summary__features">
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-hiking"></i>Trails
+                        <i class="fas fa-hiking"></i>Hiking Trails
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-mountain"></i>Mountains
+                        <i class="fas fa-mountain"></i>Mountain Views
                     </p>
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-water"></i>Coastal
+                        <i class="fas fa-water"></i>Coastal Breeze
                     </p>
                 </div>
             </div>
