--- a/oregon.html
+++ b/oregon.html
@@ -163,7 +163,7 @@
                         <i class="fas fa-hiking"></i>Mt. Hood National Forest has wonderful views, hot springs, trails, lakes and even camping spots
                     </p>         
                     <p class="summary__feature animate-summary">
-                        <i class="fas fa-snowboard"></i>Take your winter trip adventures to the mountains between November to March annually
+                        <i class="fas fa-snowboarding"></i>Winter adventure trips to the mountains between November and March
                     </p>
                 </div>
             </div>
